# Hiopdes

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Mimetic  README.md  Solver  build  cRun  cleaner  cmake_install.cmake  main.cpp  plotField.m  psiB.txt  psiT.txt  psiTR.txt  run  threeElmt.m  threeElmt2.m  threeElmtTime.m  twoElmt.m  xe.txt
Domain/: CMakeLists.txt  Element.h  Makefile  Projection.cpp  Projection.h  Quadratures.h  cmake_install.cmake
Interpolation/: CMakeLists.txt  Interpolation.h  LagrangeBasis.cpp  LagrangeBasis.h  LegendreVal.h  Makefile  cmake_install.cmake
matlab/: Gnodes.m  LegendreVal.m  MimeticpolyVal.m  functionOfMine.m  mimeticTest.m  plotter.m  plotter2D.m  roundn.m  run
